@@ -10,7 +10,8 @@
             <div class="row-fluid">
                 <div class="span12">
                     <h2>Ajouter une page rapide</h2>
-                {include file="cms/forms/add_page_p.phtml"}
+                    <div class="mc-message clearfix"></div>
+                    {include file="cms/forms/add_page_p.phtml"}
                 </div>
             </div>
         </div>
