@@ -20,6 +20,7 @@
                             </a>
                         </span>
                     </div>
+                    <div class="mc-message clearfix"></div>
                     {include file="cms/forms/edit.phtml"}
                 </div>
             </div>
