@@ -1,4 +1,4 @@
-<form id="forms_cms_add_parent" method="post" action="">
+<form id="forms_cms_edit" method="post" action="">
     <p>
         <label for="cmslink">URL</label>
         <input type="text" class="input-xxlarge" id="cmslink" readonly="readonly" size="50" value="" />
