@@ -11,6 +11,7 @@
                 <div class="span12">
                 {include file="cms/section/nav.phtml"}
                     <h1 class="small">Liste des pages parentes</h1>
+                    <div class="mc-message clearfix"></div>
                     <p>
                         <a class="btn btn-primary" href="#" id="open-add">
                             <span class="icon-plus"></span> Ajouter une page
