@@ -1,0 +1,3 @@
+<p class="span6 alert alert-warning">
+    <span class="icon-warning-sign"></span> Cet élément contient des enfants
+</p>
