@@ -1,0 +1,3 @@
+<p class="span6 alert alert-warning">
+    <span class="icon-warning-sign"></span> Les éléments ne sont pas tous remplis
+</p>
