@@ -1,0 +1,3 @@
+<p class="span6 alert alert-warning">
+    <span class="icon-warning-sign"></span> Le nombre maximum de pages est atteint
+</p>
