@@ -1,0 +1,3 @@
+<p class="span6 alert alert-success">
+    <span class="icon-ok"></span> La page à bien été sauvegardé
+</p>
