@@ -18,14 +18,18 @@ h3 {
     max-width: 300px;
     padding: 10px 25px 10px;
     margin: 0 auto 20px;
-    background-color: #fff;
-    border: 1px solid #e5e5e5;
+    background-color: #FFFFFF;
+    background-image: linear-gradient(to bottom, #E6E6E6, #FFFFFF);
+    background-repeat: repeat-x;
+    border-color: #e5e5e5 #e5e5e5 #BBBBBB;
+    border-width: 1px;
+    border-style: solid;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-    box-shadow: 0 1px 2px rgba(0,0,0,.05);
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+    box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
 /*
