@@ -1,3 +1,4 @@
+{include file="section/window.phtml"}
 <footer>
     <div class="navbar navbar-static-bottom">
         <div class="navbar-inner">
