@@ -1,0 +1,1 @@
+<div id="window-dialog"></div>
